[package]
name = "vssh"
version = "0.1.0"
authors = ["Alex Krantz <alex@alexkrantz.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "^2.33.0"
dirs = "^2.0"
rand = "^0.7"
reqwest = { version = "^0.10", features = ["blocking", "json", "native-tls"] }
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "^0.8"
url = "^2.1.1"
