[package]
name = "vssh"
version = "0.3.0"
authors = ["Alex Krantz <alex@alexkrantz.com>"]
edition = "2018"
license = "MIT"
description = "Easily SSH into a server that requires a certificate signed by HashiCorp Vault"
readme = "README.md"
homepage = "https://github.com/akrantz01/vssh.git"
repository = "https://github.com/akrantz01/vssh.git"
keywords = ["cli", "vault", "ssh"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "^2.0"
leg = "^0.4"
reqwest = { version = "^0.10", features = ["json", "native-tls"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
structopt = "^0.3"
tempfile = "^3.1"
thiserror = "^1.0"
tokio = { version = "^0.2", features = ["macros"] }
url = "^2.1.1"
whoami = "^0.8"
